2011-03-??: v1.0.3
  Added tests for standalone tags at string boundaries.

2011-03-05: v1.0.2
  Added tests for indented inline sections.
  Added tests for Windows-style newlines.

2011-03-02: v1.0.1
  Clarifying a point in the README about version compliance.
  Adding high-level documentation to each spec file.

2011-02-28: v1.0.0
  Initial Release